Check the code quality with PMD